<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Photobook</string>
    <string name="title_section1" translatable="false">Section 1</string>
    <string name="title_section2" translatable="false">Section 2</string>
    <string name="title_section3" translatable="false">Section 3</string>
    <string name="welcome" translatable="false">Welcome to Photobook</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="name_hint" translatable="false">Alice Gallakher</string>
    <string name="email_hint" translatable="false">agallakher@gmail.com</string>
    <string name="phone_hint" translatable="false">+1(111)223-34-45</string>
    <string name="default_country_code_iso" translatable="false">RU</string>
    <string name="sms_hint" translatable="false">1234</string>
    <string name="sms_title" translatable="false">sms code</string>
    <string name="register" translatable="false">Sign up</string>
    <string name="about" translatable="false">About</string>
    <string name="eula_notice" translatable="false">By registering in service you agree to <a href="http://dev.snufan.com/eula.html">license agreement</a></string>
    <string name="privacy_policy_notice" translatable="false"><a href="http://dev.snufan.com/privacy_policy.html">Privacy policy</a></string>
    <string name="link_eula" translatable="false">http://dev.snufan.com/eula.html</string>
    <string name="link_privacy_policy" translatable="false">http://dev.snufan.com/privacy_policy.html</string>
    <string name="apache_notice" translatable="false">Some components are licensed under Apache 2.0</string>
    <string name="btn_follow_text" translatable="false">Follow</string>
    <string name="btn_unfollow_text" translatable="false">Unfollow</string>
    <string name="btn_share_text" translatable="false">share</string>
    <string name="edit_title_hint" translatable="false">Fabulous morning</string>
    <string name="edit_loading" translatable="false">Loading feed</string>
    <string name="edit_uploading_image" translatable="false">Uploading image</string>
    <string name="title_activity_splash" translatable="false">SplashActivity</string>
    <string name="title_activity_image_details" translatable="false">ImageDetailsActivity</string>
    <string name="drawer_open" translatable="false">My profile</string>
    <string name="user_profile" translatable="false">User Profile</string>
    <string name="drawer_close" translatable="false">Hide</string>
    <string-array name="menu_items">
        <item>Profile</item>
    </string-array>
    <string name="btn_like" translatable="false">Like</string>
    <string name="btn_unlike" translatable="false">Unlike</string>
    <string name="btn_comment" translatable="false">Comment</string>
    <string name="btn_download" translatable="false">Download</string>
    <string name="alert_title_comment" translatable="false">New comment</string>
    <string name="alert_message_comment" translatable="false">What do you think?</string>
    <string name="alert_send_button" translatable="false">Send</string>
    <string name="alert_ok_button" translatable="false">OK</string>
    <string name="alert_cancel_button" translatable="false">Cancel</string>
    <string name="alert_delete" translatable="false">Delete</string>
    <string name="dialog_downloading" translatable="false">Downloading</string>
    <string name="dialog_download_complete" translatable="false">Image downloaded</string>
    <string name="dialog_creating_account" translatable="false">Creating account...</string>
    <string name="dialog_uploading_avatar" translatable="false">Uploading avatar...</string>
    <string name="dialog_please_wait" translatable="false">Please wait</string>
    <string name="author_name_self" translatable="false">me</string>
    <string name="word_by" translatable="false">by </string>
    <string name="alert_new_version_available" translatable="false">New version is available. Would you like to update?</string>
    <string name="alert_update_required" translatable="false">You must update application to proceed. Would you like to update now?</string>
    <string name="alert_sms_title" translatable="false">SMS verification</string>
    <string name="alert_sms_message" translatable="false">Please enter 4-digit verification code that you received in SMS</string>
    <string name="alert_wrong_sms" translatable="false">SMS code is wrong. Please try again</string>
    <string name="alert_input_name" translatable="false">Please input your name</string>
    <string name="alert_input_phone" translatable="false">Please input phone in international format starting with +</string>
    <string name="alert_select_image" translatable="false">Select image</string>
    <string name="notification_new_comment" translatable="false">New comment</string>
    <string name="toast_img_not_found" translatable="false">Image not found</string>
    <string name="image" translatable="false">Image</string>
    <string-array name="image_menu">
        <item>Unshare</item>
    </string-array>
    <string name="user_avatar" translatable="false">User avatar</string>
    <string name="user_name" translatable="false">Name:</string>
    <string name="user_phone" translatable="false">Phone:</string>
    <string name="user_email" translatable="false">E-mail:</string>
    <string name="bookmark_friends" translatable="false">Friends</string>
    <string name="bookmark_contacts" translatable="false">Contacts</string>
    <string name="bookmark_channels" translatable="false">Channels</string>
    <string name="bookmark_gallery" translatable="false">Gallery</string>
    <string name="bookmark_folders" translatable="false">Folders</string>
    <string name="bookmark_shares" translatable="false">My shares</string>
    <string name="followers" translatable="false">Followers: </string>
    <string name="aboutText" translatable="false">
        Photobook (c) 2015\n
        Alexey Boev\n
        Andrei Alikov\n
        Maxim Maximov\n
        Some components are licensed under Apache 2.0\n
        More details at www.github.com/aboev/photobook-client</string>
    <string-array name="contacts_bookmark_items">
        <item>@string/bookmark_friends</item>
        <item>@string/bookmark_contacts</item>
        <item>@string/bookmark_channels</item>
    </string-array>
    <string-array name="contacts_bookmark_icons">
        <item>@drawable/ic_tab_friends</item>
        <item>@drawable/ic_tab_contacts</item>
        <item>@drawable/ic_tab_channels</item>
    </string-array>
    <string-array name="gallery_bookmark_items">
        <item>@string/bookmark_gallery</item>
        <item>@string/bookmark_folders</item>
        <item>@string/bookmark_shares</item>
    </string-array>
    <string-array name="gallery_bookmark_icons">
        <item>@drawable/ic_tab_gallery</item>
        <item>@drawable/ic_tab_folders</item>
        <item>@drawable/ic_tab_shares</item>
    </string-array>
</resources>
