<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
		android:gravity="center"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context="com.freecoders.photobook.RegisterActivity" >
	
	    <LinearLayout
	        	  android:layout_margin="20dp"
	              android:layout_width="fill_parent"
	              android:layout_height="wrap_content"
				  android:orientation="vertical"
				  android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imageViewAvatar"
                android:layout_width="130dp"
                android:layout_height="130dp"
                app:border_width="4dp"
                app:border_color="#EEEEEE"
                android:src="@drawable/avatar"/>
	              
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="25sp"
		        android:gravity="center"
		        android:visibility="gone"
		        android:layout_marginTop="20dp"
		        android:text="@string/welcome" />
		
			<EditText
		    	android:id="@+id/name"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_marginTop="20dp"
		    	android:hint="@string/name_hint"/>
			
			<EditText
		    	android:id="@+id/email"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:hint="@string/email_hint"
		    	android:layout_marginTop="20dp"
		    	android:inputType="textEmailAddress"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_hint"
                android:layout_marginTop="20dp"
                android:inputType="phone"/>

            <TextView
                android:id="@+id/text_sms_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                android:text="@string/sms_title"/>

            <EditText
                android:id="@+id/sms_code"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sms_hint"
                android:layout_marginTop="20dp"
                android:inputType="number"
                android:maxLength="4"/>
			
			 <Button
		     	android:layout_height="wrap_content"
		     	android:layout_width="wrap_content"
		     	android:text="@string/register"
		     	android:layout_marginTop="20dp"
		     	android:padding="10dp"
		     	android:onClick="doRegister" />
		</LinearLayout>
        <TextView
            android:id="@+id/text_eula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:autoLink="web"
            android:gravity="center|bottom"
            android:layout_marginTop="20dp"
            android:text="@string/eula_notice"/>

        <TextView
            android:id="@+id/text_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:autoLink="web"
            android:gravity="center|bottom"
            android:layout_marginTop="20dp"
            android:text="@string/privacy_policy_notice"/>
	</LinearLayout>
</ScrollView>
