<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
  <ImageView
          android:id="@+id/imageViewAvatar"
          android:layout_width="match_parent"
          android:layout_height="300dp"
          android:contentDescription="@string/user_avatar" />

  <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:stretchColumns="1">
    <TableRow>
      <TextView
              android:text="@string/user_name"
              android:padding="5dip"
              android:textSize="25sp"/>
      <TextView
              android:id="@+id/txtUserName"
              android:gravity="right"
              android:padding="5dip"
              android:textSize="20sp"/>
    </TableRow>

    <TableRow>
      <TextView
              android:text="@string/user_phone"
              android:textSize="25sp"
              android:padding="5dip" />
      <TextView
              android:id="@+id/txtUserPhone"
              android:gravity="right"
              android:textSize="20sp"
              android:padding="5dip" />
    </TableRow>

    <TableRow>
      <TextView
              android:text="@string/user_email"
              android:textSize="25sp"
              android:padding="3dip" />
      <TextView
              android:id="@+id/txtUserEmail"
              android:gravity="right"
              android:textSize="20sp"
              android:padding="5dip" />
    </TableRow>
  </TableLayout>

  <Button android:id="@+id/btnFollow"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>

</LinearLayout>